project/customer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: customer-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: customer-api
    spec:
      containers:
      - name: customer-api
        image: nhutnguyen5691/customer-api
        ports:
        - containerPort: 8080
