project/customer/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customer-api
  namespace: default
  labels:
    name: customer-api
spec:
  containers:
    - image: nhutnguyen5691/customer-api
      name: customer-api
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
